tests/macros/int/extension.rs
fn main() {
    let q = requestty::questions![Int { extension: todo!() }];
}
